[gd_scene load_steps=6 format=3 uid="uid://c50e0kxipp8ub"]

[ext_resource type="Script" path="res://hud.gd" id="1_15814"]
[ext_resource type="FontFile" uid="uid://bqoxaj4nrmteg" path="res://assets/Kenney Bold.ttf" id="2_jn7gk"]

[sub_resource type="LabelSettings" id="LabelSettings_gaydo"]
font = ExtResource("2_jn7gk")
font_size = 40
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_aluim"]
font = ExtResource("2_jn7gk")

[sub_resource type="LabelSettings" id="LabelSettings_y168m"]
font = ExtResource("2_jn7gk")

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_15814")

[node name="Message" type="Label" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Knight's Tale"
label_settings = SubResource("LabelSettings_gaydo")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Time" type="Label" parent="MarginContainer"]
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_gaydo")
vertical_alignment = 1

[node name="ScorePlayer1" type="Label" parent="MarginContainer"]
layout_mode = 2
text = "Player 1: 0"
label_settings = SubResource("LabelSettings_aluim")
horizontal_alignment = 1

[node name="ScorePlayer2" type="Label" parent="MarginContainer"]
layout_mode = 2
text = "Player 2: 0"
label_settings = SubResource("LabelSettings_y168m")
horizontal_alignment = 2

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -124.0
offset_top = -80.0
offset_right = 124.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_jn7gk")
theme_override_font_sizes/font_size = 48
text = "Start"

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
